apps/settings/style/settings.css
/**
 * Settings style & layout
 * note: `lists.css' must be loaded before this stylesheet
 */

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-size: 10px;
  overflow: hidden;
}


/******************************************************************************
 * Setting panels: full-size <section role="region"> blocks
 */

/* Setting panels: full-size <section role="region"> blocks */
section[role="region"] {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  /*
    we need the background pattern when the app content is less then viewport
    (see Bug 938785)
  */
  background-color: #f4f4f4;
  overflow: hidden;
}


/**
 * Panel targets -- transitions
 * the `.previous', '.current' classes are set by settings.js
 */

section[role="region"] {
  transform: translateX(+100%);
  transition: transform .4s ease, visibility .4s ease;
}

section[role="region"].previous {
  transform: translateX(-100%);
}

section[role="region"].current {
  transform: translateX(0);
}

/**
 * Headers should not scroll with the rest of the page, except for #root.
 */
section[role="region"] > header {
  position: absolute;
}

section[role="region"] > div {
  position: absolute;
  top: 5rem;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: calc(100% - 5rem);
  overflow-y: scroll;
  will-change: scroll-position;
}


/******************************************************************************
 * Explanation texts
 */

.explanation {
  padding: 0.5rem 3rem;
  font-style: italic;
  font-size: 1.4rem;
  color: #505859;
}

.description {
  font-size: 1.7rem;
  line-height: 2.3rem;
  white-space: normal;
  -moz-hyphens: auto;
}

.description p,
.description a,
.description label {
  font-size: 1.7rem;
  line-height: 2.3rem;
  white-space: normal;
}

.description label {
    padding: 0;
}

.description label span {
  height: auto;
  min-height: 6rem;
  padding-top: 1.2rem;
  padding-bottom: 1.2rem;
  font-size: 1.7rem;
  line-height: 2.3rem;
  white-space: normal;
}

.description small {
  font-size: 1.7rem;
  color: #505859;
}

.link-text {
  font-size: 1.4rem;
  color: #336699;
  text-decoration: underline;
}

.hint label span {
  top: 2.9rem !important;
}

.hint .explanation {
  font-style: normal;
  position: relative;
  margin-top: -2rem;
  padding: 0.5rem 4rem 1.3rem 1.5rem;
  white-space: normal;
}

.hint > label:not([for]) ~ .explanation {
  padding-right: 8rem;
}

.hint .explanation[hidden] {
  display: none;
}


/******************************************************************************
 * Wi-Fi settings
 */

/* three-state items: on|off|ready */

ul[data-state="off"] ~ *,
ul[data-state] li[data-state] {
  display: none;
}

ul[data-state="on"]    li[data-state="on"],
ul[data-state="off"]   li[data-state="off"],
ul[data-state="ready"] li[data-state="ready"] {
  display: block;
}

ul[data-state="ready"] li > a {
  padding-right: 6.2rem; /* 3rem (initial padding) + 3.2rem (wifi icon width) */
}

/**
 * Wi-Fi authentication fields:
 *   - hide password field on open networks
 *   - hide identifier field on non-EAP networks
 */

section li.password,
section li.password[hidden],
section li.eap,
section li.auth-phase2,
section li.server-certificate,
section li.server-certificate-description,
section li.identity {
  display: none;
}

section[data-security*="WEP"] li.password,
section[data-security*="WPA"] li.password,
section[data-security*="EAP"] li.eap,
section[data-security*="EAP"] li.auth-phase2,
section[data-security*="EAP"] li.server-certificate,
section[data-security*="EAP"] li.server-certificate-description,
section[data-security*="EAP"] li.identity {
  display: block;
}

section li.password {
  display: block; /*asf*/
  height: 12rem;
  padding-right: 0;
}

section li.password > label {
  position: absolute;
  top: 8.3rem;
  left: 0;
  right: 1.5rem;
  height: 3rem;
  z-index: 1;
}

section li.password > label > span:after {
  left: 0;
  right: auto;
  margin-left: 0;
}

section li.password > label > span {
  position: absolute;
  left: 1.5rem;
  padding-left: 3rem;
  height: 3rem;
  color: #848484;
  font-size: 1.7rem;
  line-height: 3rem;
}

section li.password > label:active > span {
  background-color: transparent;
  color: #848484;
}

section li.password > p {
  padding: 0.5rem 1.5rem 0;
  line-height: 3.3rem;
}

#pwd-auth {
  -moz-user-focus: ignore;
}

section ul.operate-certificate {
  position: fixed;
  bottom: 0;
  width: 100%;
  background: url(images/document_bg.png);
}

#wifi-certificate-files-List li.disabled a {
  opacity: 0.6;
  pointer-events: none;
}


/******************************************************************************
* Media Storage settings
*/

#mediaStorage .space-stackedbar {
  background-color: #E7E7E7;
  border: solid 0.1rem #A6A6A6;
  border-radius: 0.3rem;
  display: inline-block;
  height: 3rem;
  margin: 0.8rem 5%;
  padding: 0.1rem;
  width: 90%;
}

#mediaStorage .space-stackedbar .stackedbar-item {
  display: inline-block;
  height: 3rem;
}

#mediaStorage .space-stackedbar .color-music,
#mediaStorage .color-music .stackedbar-color-label {
  background-color: #82C72C;
}

#mediaStorage .space-stackedbar .color-pictures,
#mediaStorage .color-pictures .stackedbar-color-label {
  background-color: #00CAF2;
}

#mediaStorage .space-stackedbar .color-videos,
#mediaStorage .color-videos .stackedbar-color-label {
  background-color: #2295D3;
}

#mediaStorage .space-stackedbar .color-free,
#mediaStorage .color-free .stackedbar-color-label {
  background-color: #E7E7E7;
}

#mediaStorage .color-free .stackedbar-color-label {
  border: solid 0.1rem #A6A6A6;
}

#mediaStorage .color-music .stackedbar-color-label,
#mediaStorage .color-pictures .stackedbar-color-label,
#mediaStorage .color-videos .stackedbar-color-label,
#mediaStorage .color-free .stackedbar-color-label {
  border-radius: 0.3rem;
}
/* ... */

